# serde-xml

./: .codecov.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: decoration.rs  error.rs  lib.rs
src/de/: map.rs  mod.rs  plain.rs  seq.rs  tests.rs  tuple.rs  var.rs
src/ser/: map.rs  mod.rs  plain.rs  seq.rs  tests.rs  tuple.rs
src/tests/: XMLSchema.xsd  format.rs  mod.rs  round_trip.rs
tests/: client.rs
