[package]
name = "serde_xml"
version = "0.1.0"
authors = ["William Bartlett <w.bartlett@treeptik.fr>"]
description = "XML data format for Serde"
license = "MIT"

[dependencies]
serde = "^1.0.0"
xml-rs = "^0.8.0"
log = "^0.4.6"

[dev-dependencies]
env_logger = "0.6.0"
indoc = "0.3.1"
serde_derive = "^1.0.0"